--- a/d2c-growth.htm
+++ b/d2c-growth.htm
@@ -1,240 +1,289 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>D2C Growth Systems | Veridian Design Studio</title>
+    <meta
+      name="description"
+      content="Growth and conversion systems for D2C founders who see growth as a systems problem, not a marketing problem."
+    />
+    <link rel="stylesheet" href="css/styles.css" />
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>D2C Growth Systems | Veridian Design Studio</title>
-  <meta name="description"
-    content="Growth and conversion systems for D2C founders who see growth as a systems problem, not a marketing problem.">
-  <link rel="stylesheet" href="css/styles.css">
-</head>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <nav class="container">
+        <a href="index.html" class="header-logo">Veridian</a>
 
-<body>
-  <!-- Header -->
-  <header class="header">
-    <nav class="container">
-      <a href="index.html" class="header-logo">Veridian</a>
-
-      <div class="header-nav">
-        <a href="services.html">Services</a>
-        <a href="how-we-work.html">How We Work</a>
-        <a href="index.html#work">Work</a>
-      </div>
-
-      <a href="#contact" class="btn btn-restrained">Talk to Us</a>
-
-      <button class="mobile-menu-btn" aria-label="Toggle menu">
-        <span></span>
-        <span></span>
-        <span></span>
-      </button>
-    </nav>
-  </header>
-  <!-- Mobile Menu -->
-  <div class="mobile-menu">
-    <a href="services.html">Services</a>
-    <a href="how-we-work.html">How We Work</a>
-    <a href="index.html#work">Work</a>
-    <a href="#contact">Contact</a>
-  </div>
-  <!-- Page Header -->
-  <section class="page-header">
-    <div class="container">
-      <div class="page-header-content">
-        <p class="text-label text-subtle fade-in mb-8">D2C Growth Systems</p>
-
-        <h1 class="text-display-lg fade-in fade-in-delay-1 mb-12">
-          Growth is a system.<br>
-          Not a series of tactics.
-        </h1>
-
-        <p class="text-body-lg text-subtle fade-in fade-in-delay-2 max-w-2xl">
-          D2C brands face relentless pressure to grow. Paid acquisition costs rise.
-          Competition intensifies. The brands that win are the ones that treat growth
-          as infrastructure—not a collection of hacks.
-        </p>
-      </div>
-    </div>
-  </section>
-  <div class="separator container"></div>
-  <!-- When Veridian Helps Section -->
-  <section class="content-section">
-    <div class="container">
-      <div class="content-grid">
-        <div>
-          <p class="text-label text-subtle fade-in mb-4">When Veridian Is Most Helpful</p>
+        <div class="header-nav">
+          <a href="services.html">Services</a>
+          <a href="how-we-work.html">How We Work</a>
+          <a href="index.html#work">Work</a>
         </div>
 
-        <div>
-          <p class="text-body-lg text-subtle fade-in mb-12 max-w-2xl">
-            We work with D2C founders at moments when growth requires
-            more than optimization—when it requires systems.
+        <a href="#contact" class="btn btn-restrained">Talk to Us</a>
+
+        <button class="mobile-menu-btn" aria-label="Toggle menu">
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </nav>
+    </header>
+    <!-- Mobile Menu -->
+    <div class="mobile-menu">
+      <a href="services.html">Services</a>
+      <a href="how-we-work.html">How We Work</a>
+      <a href="index.html#work">Work</a>
+      <a href="#contact">Contact</a>
+    </div>
+    <!-- Page Header -->
+    <section class="page-header">
+      <div class="container">
+        <div class="page-header-content">
+          <p class="text-label text-subtle fade-in mb-8">D2C Growth Systems</p>
+
+          <h1 class="text-display-lg fade-in fade-in-delay-1 mb-12">
+            Growth is a system.<br />
+            Not a series of tactics.
+          </h1>
+
+          <p class="text-body-lg text-subtle fade-in fade-in-delay-2 max-w-2xl">
+            D2C brands face relentless pressure to grow. Paid acquisition costs
+            rise. Competition intensifies. The brands that win are the ones that
+            treat growth as infrastructure—not a collection of hacks.
           </p>
+        </div>
+      </div>
+    </section>
+    <div class="separator container"></div>
+    <!-- When Veridian Helps Section -->
+    <section class="content-section">
+      <div class="container">
+        <div class="content-grid">
+          <div>
+            <p class="text-label text-subtle fade-in mb-4">
+              When Veridian Is Most Helpful
+            </p>
+          </div>
 
-          <div class="content-list">
-            <div class="content-item fade-in fade-in-delay-1">
-              <h4>Hitting conversion ceilings</h4>
-              <p class="text-body text-subtle">
-                You've optimized the obvious things. Further gains require rethinking
-                the underlying experience architecture—not just testing button colors.
-              </p>
-            </div>
+          <div>
+            <p class="text-body-lg text-subtle fade-in mb-12 max-w-2xl">
+              We work with D2C founders at moments when growth requires more
+              than optimization—when it requires systems.
+            </p>
 
-            <div class="content-item fade-in fade-in-delay-2">
-              <h4>Scaling beyond founder-led growth</h4>
-              <p class="text-body text-subtle">
-                What worked when you made every decision won't work at scale.
-                We help build systems that enable your team to experiment without fragmenting the experience.
-              </p>
-            </div>
+            <div class="content-list">
+              <div class="content-item fade-in fade-in-delay-1">
+                <h4>Hitting conversion ceilings</h4>
+                <p class="text-body text-subtle">
+                  You've optimized the obvious things. Further gains require
+                  rethinking the underlying experience architecture—not just
+                  testing button colors.
+                </p>
+              </div>
 
-            <div class="content-item fade-in fade-in-delay-3">
-              <h4>Expanding product lines</h4>
-              <p class="text-body text-subtle">
-                More products mean more complexity. We help teams scale their catalog
-                without overwhelming customers or diluting brand clarity.
-              </p>
-            </div>
+              <div class="content-item fade-in fade-in-delay-2">
+                <h4>Scaling beyond founder-led growth</h4>
+                <p class="text-body text-subtle">
+                  What worked when you made every decision won't work at scale.
+                  We help build systems that enable your team to experiment
+                  without fragmenting the experience.
+                </p>
+              </div>
 
-            <div class="content-item fade-in fade-in-delay-4">
-              <h4>Building retention systems</h4>
-              <p class="text-body text-subtle">
-                Acquisition costs only make sense if customers return.
-                We design post-purchase experiences that compound customer lifetime value.
-              </p>
+              <div class="content-item fade-in fade-in-delay-3">
+                <h4>Expanding product lines</h4>
+                <p class="text-body text-subtle">
+                  More products mean more complexity. We help teams scale their
+                  catalog without overwhelming customers or diluting brand
+                  clarity.
+                </p>
+              </div>
+
+              <div class="content-item fade-in fade-in-delay-4">
+                <h4>Building retention systems</h4>
+                <p class="text-body text-subtle">
+                  Acquisition costs only make sense if customers return. We
+                  design post-purchase experiences that compound customer
+                  lifetime value.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <div class="separator container"></div>
-  <!-- What We Support Section -->
-  <section class="content-section">
-    <div class="container">
-      <div class="content-grid">
-        <div>
-          <p class="text-label text-subtle fade-in mb-4">What Veridian Supports</p>
-        </div>
+    </section>
+    <div class="separator container"></div>
+    <!-- What We Support Section -->
+    <section class="content-section">
+      <div class="container">
+        <div class="content-grid">
+          <div>
+            <p class="text-label text-subtle fade-in mb-4">
+              What Veridian Supports
+            </p>
+          </div>
 
-        <div>
-          <div class="content-list">
-            <div class="content-item fade-in">
-              <h4>Growth & Conversion Systems</h4>
-              <p class="text-body text-subtle">
-                End-to-end optimization across acquisition, product discovery, and checkout.
-                We focus on the full funnel—not isolated touchpoints—because conversion happens
-                across the entire journey.
-              </p>
-            </div>
+          <div>
+            <div class="content-list">
+              <div class="content-item fade-in">
+                <h4>Growth & Conversion Systems</h4>
+                <p class="text-body text-subtle">
+                  End-to-end optimization across acquisition, product discovery,
+                  and checkout. We focus on the full funnel—not isolated
+                  touchpoints—because conversion happens across the entire
+                  journey.
+                </p>
+              </div>
 
-            <div class="content-item fade-in fade-in-delay-1">
-              <h4>Design Systems for Scale</h4>
-              <p class="text-body text-subtle">
-                Component libraries and design foundations that enable rapid experimentation.
-                Your team can test new layouts and campaigns without rebuilding from scratch
-                or fragmenting the brand.
-              </p>
-            </div>
+              <div class="content-item fade-in fade-in-delay-1">
+                <h4>Design Systems for Scale</h4>
+                <p class="text-body text-subtle">
+                  Component libraries and design foundations that enable rapid
+                  experimentation. Your team can test new layouts and campaigns
+                  without rebuilding from scratch or fragmenting the brand.
+                </p>
+              </div>
 
-            <div class="content-item fade-in fade-in-delay-2">
-              <h4>Data-Informed UX</h4>
-              <p class="text-body text-subtle">
-                Design decisions grounded in behavioral data and user research.
-                We help teams move beyond gut instinct to evidence-based optimization
-                that compounds over time.
-              </p>
+              <div class="content-item fade-in fade-in-delay-2">
+                <h4>Data-Informed UX</h4>
+                <p class="text-body text-subtle">
+                  Design decisions grounded in behavioral data and user
+                  research. We help teams move beyond gut instinct to
+                  evidence-based optimization that compounds over time.
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </section>
-  <div class="separator container"></div>
-  <!-- Sustainable Growth Section -->
-  <section class="content-section">
-    <div class="container">
-      <div class="content-grid">
-        <div>
-          <p class="text-label text-subtle fade-in mb-4">Sustainable Growth</p>
-        </div>
+    </section>
+    <div class="separator container"></div>
+    <!-- Sustainable Growth Section -->
+    <section class="content-section">
+      <div class="container">
+        <div class="content-grid">
+          <div>
+            <p class="text-label text-subtle fade-in mb-4">
+              Sustainable Growth
+            </p>
+          </div>
 
-        <div>
-          <p class="text-body-lg text-subtle fade-in mb-8 max-w-2xl">
-            We're skeptical of "growth hacks" and short-term wins
-            that create long-term problems.
-          </p>
+          <div>
+            <p class="text-body-lg text-subtle fade-in mb-8 max-w-2xl">
+              We're skeptical of "growth hacks" and short-term wins that create
+              long-term problems.
+            </p>
 
-          <p class="text-body text-subtle fade-in fade-in-delay-1 mb-8 max-w-2xl">
-            The D2C landscape is full of tactics that boost metrics temporarily while eroding
-            customer trust and brand equity. We focus on durable conversion infrastructure—
-            systems that compound value over years, not weeks.
-          </p>
+            <p
+              class="text-body text-subtle fade-in fade-in-delay-1 mb-8 max-w-2xl"
+            >
+              The D2C landscape is full of tactics that boost metrics
+              temporarily while eroding customer trust and brand equity. We
+              focus on durable conversion infrastructure— systems that compound
+              value over years, not weeks.
+            </p>
 
-          <p class="text-body text-subtle fade-in fade-in-delay-2 max-w-2xl">
-            This means we sometimes recommend against common "best practices" when they conflict
-            with long-term brand health. We'd rather build something sustainable than chase
-            vanity metrics.
-          </p>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- Contact Section -->
-  <section id="contact" class="section contact">
-    <div class="container">
-      <div class="max-w-4xl">
-        <p class="text-label fade-in mb-8">Start a Conversation</p>
-
-        <h2 class="text-display-lg fade-in fade-in-delay-1 mb-12">
-          Ready to build growth systems?
-        </h2>
-
-        <p class="text-body-lg fade-in fade-in-delay-2 max-w-xl mb-12">
-          We partner with a small number of D2C brands each year.
-          If you're building for the long term and want a senior design partner, let's talk.
-        </p>
-
-        <a href="mailto:hello@veridian.studio" class="btn btn-inverted fade-in fade-in-delay-3">Talk to Us</a>
-      </div>
-    </div>
-  </section>
-  <!-- Footer -->
-  <footer class="footer">
-    <div class="container">
-      <div class="footer-grid fade-in">
-        <div>
-          <p class="text-body mb-4" style="font-weight: 500;">Veridian</p>
-          <p class="text-caption text-subtle" style="max-width: 16rem;">
-            Senior design studio focused on clarity,
-            restraint, and lasting impact.
-          </p>
-        </div>
-
-        <div>
-          <p class="text-label text-subtle mb-4">Contact</p>
-          <a href="mailto:hello@veridian.studio" class="text-caption text-subtle footer-links">
-            hello@veridian.studio
-          </a>
-        </div>
-
-        <div>
-          <p class="text-label text-subtle mb-4">Follow</p>
-          <div class="footer-links">
-            <a href="#" class="text-caption">LinkedIn</a>
-            <a href="#" class="text-caption">Twitter</a>
+            <p class="text-body text-subtle fade-in fade-in-delay-2 max-w-2xl">
+              This means we sometimes recommend against common "best practices"
+              when they conflict with long-term brand health. We'd rather build
+              something sustainable than chase vanity metrics.
+            </p>
           </div>
         </div>
       </div>
-      <div class="footer-copyright fade-in fade-in-delay-1">
-        <p class="text-caption text-subtle">
-          © 2024 Veridian Design Studio. All rights reserved.
-        </p>
-      </div>
-    </div>
-  </footer>
-  <script src="js/main.js"></script>
-</body>
+    </section>
+    <!-- Contact Section -->
+    <section id="contact" class="section contact">
+      <div class="container">
+        <div class="max-w-4xl">
+          <p class="text-label fade-in mb-8">Start a Conversation</p>
 
+          <h2 class="text-display-lg fade-in fade-in-delay-1 mb-12">
+            Ready to build growth systems?
+          </h2>
+
+          <p class="text-body-lg fade-in fade-in-delay-2 max-w-xl mb-12">
+            We partner with a small number of D2C brands each year. If you're
+            building for the long term and want a senior design partner, let's
+            talk.
+          </p>
+
+          <a
+            href="mailto:hello@veridian.studio"
+            class="btn btn-inverted fade-in fade-in-delay-3"
+            >Talk to Us</a
+          >
+        </div>
+      </div>
+    </section>
+    <!-- Footer -->
+    <footer class="footer">
+      <div class="container">
+        <div class="footer-grid fade-in">
+          <div>
+            <p class="text-body mb-4" style="font-weight: 500">Veridian</p>
+            <p class="text-caption text-subtle" style="max-width: 16rem">
+              Senior design studio focused on clarity, restraint, and lasting
+              impact.
+            </p>
+          </div>
+
+          <div>
+            <p class="text-label text-subtle mb-4">Contact</p>
+            <a
+              href="https://mail.google.com/mail/?view=cm&to=hello@veridian.studio&su=FAQ"
+              class="text-caption text-subtle footer-links"
+              onclick="
+                window.open(
+                  'https://mail.google.com/mail/?view=cm&to=hello@veridian.studio&su=FAQ',
+                  '_blank',
+                  'width=800,height=600,left=' +
+                    (screen.width - 800) / 2 +
+                    ',top=' +
+                    (screen.height - 600) / 2 +
+                    ',toolbar=no,menubar=no,scrollbars=no,resizable=no,status=no',
+                );
+                return false;
+              "
+              >hello@veridian.studio</a
+            >
+          </div>
+
+          <div>
+            <p class="text-label text-subtle mb-4">Follow</p>
+            <div class="footer-links">
+              <a
+                href="https://www.linkedin.com/company/veridian-design-studio/"
+                target="_blank"
+                class="text-links linkedin"
+                >LinkedIn</a
+              >
+              <a
+                href="https://x.com/"
+                target="_blank"
+                class="text-links twitter"
+                >Twitter</a
+              >
+              <a
+                href="https://www.instagram.com/veridiandesignstudio/?utm_source=ig_web_button_share_sheet"
+                target="_blank"
+                class="text-links instagram"
+                >Instagram</a
+              >
+            </div>
+          </div>
+        </div>
+        <div class="footer-copyright fade-in fade-in-delay-1">
+          <p class="text-caption text-subtle">
+            © 2024 Veridian Design Studio. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
+    <script src="js/main.js"></script>
+  </body>
 </html>
