Page-Header & Content consistency changes

--- a/saas-platforms.html
+++ b/saas-platforms.html
@@ -44,12 +44,15 @@
         <div class="page-header-content">
           <p class="text-label text-subtle fade-in mb-8">SaaS & Platforms</p>
 
-          <h1 class="text-display-lg fade-in fade-in-delay-1 mb-12">
+          <h1 class="text-display-xl fade-in fade-in-delay-1">
             Complexity is the product.<br />
             Clarity is the goal.
           </h1>
+          <br /><br />
 
-          <p class="text-body-lg text-subtle fade-in fade-in-delay-2 max-w-2xl">
+          <p
+            class="text-body-lg text-subtle hero-description fade-in fade-in-delay-2"
+          >
             SaaS products accumulate complexity over time. Features layer on
             features. User needs diversify. AI capabilities expand what's
             possible—and what users expect. Veridian helps product leaders
