--- a/services.html
+++ b/services.html
@@ -44,12 +44,15 @@
         <div class="page-header-content">
           <p class="text-label text-subtle fade-in mb-8">Services</p>
 
-          <h1 class="text-display-lg fade-in fade-in-delay-1 mb-12">
+          <h1 class="text-display-xl fade-in fade-in-delay-1">
             Systems that scale.<br />
             Decisions that last.
           </h1>
+          <br /><br />
 
-          <p class="text-body-lg text-subtle fade-in fade-in-delay-2 max-w-2xl">
+          <p
+            class="text-body-lg text-subtle hero-description fade-in fade-in-delay-2"
+          >
             We design product systems, growth infrastructure, and scalable
             design foundations for organizations building complex products. Our
             work spans SaaS platforms, enterprise tools, and D2C growth systems.
@@ -57,17 +60,19 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
+
     <!-- SaaS & Platforms Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">SaaS & Platforms</p>
           </div>
 
           <div>
-            <p class="text-body-lg text-subtle fade-in mb-12 max-w-2xl">
+            <p class="text-body text-subtle fade-in mb-12 max-w-2xl">
               For SaaS founders, CTOs, and product leaders navigating complexity
               at scale. We bring structure to ambiguous product challenges and
               help teams make confident design decisions.
@@ -112,17 +117,19 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
+
     <!-- D2C Growth Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">D2C Growth</p>
           </div>
 
           <div>
-            <p class="text-body-lg text-subtle fade-in mb-12 max-w-2xl">
+            <p class="text-body text-subtle fade-in mb-12 max-w-2xl">
               For D2C founders who see growth as a systems problem, not a
               marketing problem. We design conversion infrastructure that
               compounds over time.
@@ -166,10 +173,12 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
+
     <!-- What Unites Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">
@@ -178,7 +187,7 @@
           </div>
 
           <div>
-            <p class="text-body-lg text-subtle fade-in mb-8 max-w-2xl">
+            <p class="text-body text-subtle fade-in mb-8 max-w-2xl">
               Whether SaaS or D2C, our work shares the same foundation: systems
               thinking, decision clarity, and designs built for durability.
             </p>
@@ -193,10 +202,12 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
+
     <!-- What Veridian Is Not Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">
@@ -205,7 +216,7 @@
           </div>
 
           <div>
-            <p class="text-body-lg text-subtle fade-in mb-12 max-w-2xl">
+            <p class="text-body text-subtle fade-in mb-12 max-w-2xl">
               Clarity about what we don't do helps ensure the right fit.
             </p>
 
@@ -250,7 +261,7 @@
             Ready to design with clarity?
           </h2>
 
-          <p class="text-body-lg fade-in fade-in-delay-2 max-w-xl mb-12">
+          <p class="text-body fade-in fade-in-delay-2 max-w-xl mb-12">
             We partner with a small number of teams each year. If you're
             building a serious product and want a senior design partner, let's
             talk.
