--- a/case-studies.html
+++ b/case-studies.html
@@ -45,11 +45,16 @@
         <div class="page-header-content">
           <p class="text-label text-subtle fade-in mb-4">Case Studies</p>
 
-          <h1 class="text-display-lg fade-in fade-in-delay-1 mb-8">
-            Selected work across SaaS platforms and D2C growth teams.
+          <h1 class="text-display-xl fade-in fade-in-delay-1">
+            Selected work<br />
+            across SaaS platforms<br />
+            and D2C growth teams.
           </h1>
+          <br /><br />
 
-          <p class="text-body-lg text-subtle fade-in fade-in-delay-2">
+          <p
+            class="text-body-lg text-subtle hero-description fade-in fade-in-delay-2"
+          >
             A closer look at partnerships where we've driven meaningful impact
             through systems thinking, design clarity, and long-term strategic
             collaboration.
@@ -115,7 +120,7 @@
             </div>
           </div>
 
-          <hr class="separator" />
+    <div class="separator container"></div>
 
           <!-- Enterprise Internal Tools -->
           <div class="case-study-item fade-in fade-in-delay-1">
@@ -153,7 +158,7 @@
             </div>
           </div>
 
-          <hr class="separator" />
+    <div class="separator container"></div>
 
           <!-- AI Product Team -->
           <div class="case-study-item fade-in fade-in-delay-2">
@@ -255,7 +260,7 @@
             </div>
           </div>
 
-          <hr class="separator" />
+    <div class="separator container"></div>
 
           <!-- Premium Lifestyle Brand -->
           <div class="case-study-item fade-in fade-in-delay-1">
