--- a/how-we-work.html
+++ b/how-we-work.html
@@ -44,12 +44,15 @@
         <div class="page-header-content">
           <p class="text-label text-subtle fade-in mb-8">How We Work</p>
 
-          <h1 class="text-display-lg fade-in fade-in-delay-1 mb-12">
+          <h1 class="text-display-xl fade-in fade-in-delay-1">
             Extending capacity.<br />
             Not replacing it.
           </h1>
+          <br /><br />
 
-          <p class="text-body-lg text-subtle fade-in fade-in-delay-2 max-w-2xl">
+          <p
+            class="text-body-lg text-subtle hero-description fade-in fade-in-delay-2"
+          >
             Veridian is designed to complement internal teams—not compete with
             them. We bring senior perspective and systems expertise at moments
             when additional capacity creates outsized impact.
@@ -57,10 +60,12 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
+
     <!-- How We Think Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">
@@ -104,10 +109,12 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
+
     <!-- Working With Teams Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">
@@ -163,10 +170,12 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
+
     <!-- Engagement Shapes Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">Engagement Shapes</p>
@@ -211,10 +220,12 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
+
     <!-- Pricing Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">How Pricing Works</p>
