Removed Case studies content

--- a/index.html
+++ b/index.html
@@ -205,32 +205,7 @@
         </div>
       </div>
     </section>
-    <!--case-studies Section-->
-    <section id="casestudies" class="casestudies">
-      <div class="container">
-        <div>
-          <p class="text-label text-subtle fade-in mb-4">
-            Selected Partnerships
-          </p>
-          <h2 class="text-display-lg fade-in fade-in-delay-1">
-            The work speaks for itself.
-          </h2>
-          <p
-            class="text-body-lg text-subtle fade-in fade-in-delay-1 max-w-3xl mb-8"
-          >
-            We work with leaders who value substance over speed and clarity over
-            noise. Our approach is deliberate, systems-first, and grounded in
-            real operational constraints. We don't design for demos. We design
-            for durability.
-          </p>
-          <a
-            href="case-studies.html"
-            class="btn btn-editorial fade-in fade-in-delay-3"
-            >Explore Case studies</a
-          >
-        </div>
-      </div>
-    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="section contact">
       <div class="container">
@@ -270,7 +245,7 @@
           <div>
             <p class="text-label text-subtle mb-4">Contact</p>
             <a
-              href="https://mail.google.com/mail/?view=cm&to=hello@veridian.studio&su=FAQ"
+              href="mailto:hello@veridian.studio"
               class="text-caption text-subtle footer-links"
               onclick="
                 window.open(
