Refined resolution scaling and mobile view

--- a/d2c-growth.html
+++ b/d2c-growth.html
@@ -45,12 +45,15 @@
         <div class="page-header-content">
           <p class="text-label text-subtle fade-in mb-8">D2C Growth Systems</p>
 
-          <h1 class="text-display-lg fade-in fade-in-delay-1 mb-12">
+          <h1 class="text-display-xl fade-in fade-in-delay-1">
             Growth is a system.<br />
             Not a series of tactics.
           </h1>
+          <br /><br />
 
-          <p class="text-body-lg text-subtle fade-in fade-in-delay-2 max-w-2xl">
+          <p
+            class="text-body-lg text-subtle hero-description fade-in fade-in-delay-2"
+          >
             D2C brands face relentless pressure to grow. Paid acquisition costs
             rise. Competition intensifies. The brands that win are the ones that
             treat growth as infrastructure—not a collection of hacks.
@@ -58,10 +61,11 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
     <!-- When Veridian Helps Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">
@@ -70,7 +74,9 @@
           </div>
 
           <div>
-            <p class="text-body-lg text-subtle fade-in mb-12 max-w-2xl">
+            <p
+              class="text-body text-subtle description fade-in mb-12 max-w-2xl"
+            >
               We work with D2C founders at moments when growth requires more
               than optimization—when it requires systems.
             </p>
@@ -116,10 +122,12 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
+
     <!-- What We Support Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">
@@ -161,10 +169,12 @@
         </div>
       </div>
     </section>
-    <div class="separator container"></div>
+
     <!-- Sustainable Growth Section -->
     <section class="content-section">
       <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
         <div class="content-grid">
           <div>
             <p class="text-label text-subtle fade-in mb-4">
@@ -173,7 +183,7 @@
           </div>
 
           <div>
-            <p class="text-body-lg text-subtle fade-in mb-8 max-w-2xl">
+            <p class="text-body text-subtle description fade-in mb-8 max-w-2xl">
               We're skeptical of "growth hacks" and short-term wins that create
               long-term problems.
             </p>
