--- a/how-we-work.html
+++ b/how-we-work.html
@@ -123,7 +123,9 @@
           </div>
 
           <div>
-            <p class="text-body-lg text-subtle fade-in mb-12 max-w-2xl">
+            <p
+              class="text-body text-subtle description fade-in mb-12 max-w-2xl"
+            >
               We collaborate closely with internal stakeholders—each with their
               own perspective and expertise.
             </p>
@@ -182,7 +184,9 @@
           </div>
 
           <div>
-            <p class="text-body-lg text-subtle fade-in mb-12 max-w-2xl">
+            <p
+              class="text-body text-subtle description fade-in mb-12 max-w-2xl"
+            >
               We structure engagements around outcomes, not hours. The right
               shape depends on what you're trying to accomplish.
             </p>
@@ -232,7 +236,9 @@
           </div>
 
           <div>
-            <p class="text-body-lg text-subtle fade-in mb-8 max-w-2xl">
+            <p
+              class="text-body-lg text-subtle description fade-in mb-8 max-w-2xl"
+            >
               We price based on value and scope—not hours.
             </p>
 
