--- a/services.html
+++ b/services.html
@@ -72,7 +72,9 @@
           </div>
 
           <div>
-            <p class="text-body text-subtle fade-in mb-12 max-w-2xl">
+            <p
+              class="text-body text-subtle description fade-in mb-12 max-w-2xl"
+            >
               For SaaS founders, CTOs, and product leaders navigating complexity
               at scale. We bring structure to ambiguous product challenges and
               help teams make confident design decisions.
@@ -106,13 +108,13 @@
                 </p>
               </div>
             </div>
-
-            <a
-              href="saas-platforms.html"
-              class="btn btn-editorial fade-in fade-in-delay-4 mt-12"
-            >
-              Learn more about SaaS & Platforms →
-            </a>
+            <div class="content-item fade-in fade-in-delay-3">
+              <a
+                href="saas-platforms.html"
+                class="btn btn-editorial fade-in fade-in-delay-4 mt-12"
+              >
+                Learn more about SaaS & Platforms →
+              </a>
           </div>
         </div>
       </div>
@@ -129,7 +131,9 @@
           </div>
 
           <div>
-            <p class="text-body text-subtle fade-in mb-12 max-w-2xl">
+            <p
+              class="text-body text-subtle description fade-in mb-12 max-w-2xl"
+            >
               For D2C founders who see growth as a systems problem, not a
               marketing problem. We design conversion infrastructure that
               compounds over time.
@@ -162,42 +166,14 @@
                 </p>
               </div>
             </div>
-
-            <a
-              href="d2c-growth.html"
-              class="btn btn-editorial fade-in fade-in-delay-4 mt-12"
-            >
-              Learn more about D2C Growth →
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- What Unites Section -->
-    <section class="content-section">
-      <div class="container">
-        <div class="separator container"></div>
-        <br /><br />
-        <div class="content-grid">
-          <div>
-            <p class="text-label text-subtle fade-in mb-4">
-              What Unites Our Work
-            </p>
-          </div>
-
-          <div>
-            <p class="text-body text-subtle fade-in mb-8 max-w-2xl">
-              Whether SaaS or D2C, our work shares the same foundation: systems
-              thinking, decision clarity, and designs built for durability.
-            </p>
-
-            <p class="text-body text-subtle fade-in fade-in-delay-1 max-w-2xl">
-              We approach every engagement as a systems problem. We're not here
-              to deliver screens—we're here to help you build design
-              infrastructure that compounds over time. Our goal is always the
-              same: help leadership teams make better decisions faster.
-            </p>
+            <div class="content-item fade-in fade-in-delay-3">
+              <a
+                href="d2c-growth.html"
+                class="btn btn-editorial fade-in fade-in-delay-4 mt-12"
+              >
+                Learn more about D2C Growth →
+              </a>
+            </div>
           </div>
         </div>
       </div>
@@ -216,7 +192,9 @@
           </div>
 
           <div>
-            <p class="text-body text-subtle fade-in mb-12 max-w-2xl">
+            <p
+              class="text-body text-subtle description fade-in mb-12 max-w-2xl"
+            >
               Clarity about what we don't do helps ensure the right fit.
             </p>
 
@@ -251,6 +229,36 @@
         </div>
       </div>
     </section>
+    
+<!-- What Unites Section -->
+    <section class="content-section">
+      <div class="container">
+        <div class="separator container"></div>
+        <br /><br />
+        <div class="content-grid">
+          <div>
+            <p class="text-label text-subtle fade-in mb-4">
+              What Unites Our Work
+            </p>
+          </div>
+
+          <div>
+            <p class="text-body text-subtle description fade-in mb-8 max-w-2xl">
+              Whether SaaS or D2C, our work shares the same foundation: systems
+              thinking, decision clarity, and designs built for durability.
+            </p>
+
+            <p class="text-body text-subtle fade-in fade-in-delay-1 max-w-2xl">
+              We approach every engagement as a systems problem. We're not here
+              to deliver screens—we're here to help you build design
+              infrastructure that compounds over time. Our goal is always the
+              same: help leadership teams make better decisions faster.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Contact Section -->
     <section id="contact" class="section contact">
       <div class="container">
