--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Header -->
     <header class="header">
       <nav class="container">
-        <a href="index.html" class="header-logo">Veridian</a>
+        <img class="logo" src="images/logo.png" />
 
         <div class="header-nav">
           <a href="services.html">Services</a>
@@ -235,7 +235,7 @@
       <div class="container">
         <div class="footer-grid fade-in">
           <div>
-            <p class="text-body mb-4" style="font-weight: 500">Veridian</p>
+            <img class="logo mb-4" src="images/logo.png" />
             <p class="text-caption text-subtle" style="max-width: 16rem">
               Senior design studio focused on clarity, restraint, and lasting
               impact.
