Added home anchor to logo

--- a/how-we-work.html
+++ b/how-we-work.html
@@ -14,8 +14,9 @@
     <!-- Header -->
     <header class="header">
       <nav class="container">
-        <img class="logo" src="images/logo.png" />
-
+        <a href="index.html">
+          <img class="logo" src="images/logo.png" />
+        </a>
         <div class="header-nav">
           <a href="services.html">Services</a>
           <a href="how-we-work.html">How We Work</a>
@@ -296,7 +297,9 @@
       <div class="container">
         <div class="footer-grid fade-in">
           <div>
-            <img class="logo mb-4" src="images/logo.png" />
+            <a href="index.html">
+              <img class="logo" src="images/logo.png" />
+            </a>
             <p class="text-caption text-subtle" style="max-width: 16rem">
               Senior design studio focused on clarity, restraint, and lasting
               impact.
