--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
         <div class="header-nav">
           <a href="services.html">Services</a>
           <a href="how-we-work.html">How We Work</a>
-          <a href="#work">Work</a>
+          <a href="index.html#work">Work</a>
+          <a href="academy.html"
+            ><button class="btn-academy">Veridian Academy</button>
+          </a>
         </div>
 
         <a href="#contact" class="btn btn-restrained">Talk to Us</a>
@@ -49,7 +52,8 @@
     <div class="mobile-menu">
       <a href="services.html">Services</a>
       <a href="how-we-work.html">How We Work</a>
-      <a href="#work">Work</a>
+      <a href="academy.html">Academy</a>
+      <a href="index.html#work">Work</a>
       <a href="#contact">Contact</a>
     </div>
     <!-- Hero Section -->
