--- a/d2c-growth.html
+++ b/d2c-growth.html
@@ -22,6 +22,9 @@
           <a href="services.html">Services</a>
           <a href="how-we-work.html">How We Work</a>
           <a href="index.html#work">Work</a>
+          <a href="academy.html"
+            ><button class="btn-academy">Veridian Academy</button>
+          </a>
         </div>
 
         <a href="#contact" class="btn btn-restrained">Talk to Us</a>
@@ -37,6 +40,7 @@
     <div class="mobile-menu">
       <a href="services.html">Services</a>
       <a href="how-we-work.html">How We Work</a>
+      <a href="academy.html">Academy</a>
       <a href="index.html#work">Work</a>
       <a href="#contact">Contact</a>
     </div>
