--- a/services.html
+++ b/services.html
@@ -21,6 +21,9 @@
           <a href="services.html">Services</a>
           <a href="how-we-work.html">How We Work</a>
           <a href="index.html#work">Work</a>
+          <a href="academy.html"
+            ><button class="btn-academy">Veridian Academy</button>
+          </a>
         </div>
 
         <a href="#contact" class="btn btn-restrained">Talk to Us</a>
@@ -36,6 +39,7 @@
     <div class="mobile-menu">
       <a href="services.html">Services</a>
       <a href="how-we-work.html">How We Work</a>
+      <a href="academy.html">Academy</a>
       <a href="index.html#work">Work</a>
       <a href="#contact">Contact</a>
     </div>
